# desk_notes_display

./: .gitignore  Cargo.toml  DeskTodoDisplay.code-workspace  LICENSE  README.md  platformio.ini
ControllerFimware/: platformio.ini
ControllerFimware/include/: GxEPD2_display_selection_new_style.h  GxEPD2_selection_check.h  example_config.h
ControllerFimware/src/: main.cpp
STL_files/: TODO Display Stand - Stand Base Lid.stl  TODO Display Stand - Stand.stl
src/: example_display.rs  lib.rs  main.cpp
web_server/: .gitignore  Cargo.toml  EXAMPLE-desk_todo_display_webserver.service
web_server/src/: config.rs  example_config.rs  main.rs
