[package]
edition = "2021"
name    = "desk_notes_display"
version = "0.1.0"

[[bin]]
name = "desk_notes_display"
path = "./src/bin/main.rs"


[dependencies]
critical-section = "1.2.0"
embedded-graphics = "0.8.1"
embedded-io = "0.6.1"
embedded-svc = { version = "0.28.1", default-features = false, features = ["use_numenum", "use_serde", "use_strum"] }
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32c3", "log"] }
esp-wifi = { version = "0.12.0", default-features = false, features = [
  "esp-alloc",
  "esp32c3",
  "log",
  "utils",
  "wifi",
] }
fugit = "0.3.7"
log = { version = "0.4.25" }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
ssd1306 = "0.9.0"
# ssd1306 = "0.8.4"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
